# libpbl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ClangOverrides.txt  README.md
.github/workflows/: clang-compatibility-check.yml  codecov.yml  codeql-analysis.yml  drmemory.yml  gcc-compatibility-checks.yml  mingw-compatibility-checks.yml
examples/: CMakeLists.txt  simple-io.c
include/: CMakeLists.txt
include/libpbl/: pbl-apply-macro.h  pbl-err.h  pbl-function.h  pbl-io.h  pbl-main.h  pbl-mem-tools.h  pbl.h
include/libpbl/additional/: pbl-apply-macro.h  va-opt.h
include/libpbl/core/: pbl-core.h  pbl-file-setup.h  pbl-mem.h  pbl-meta-types.h  pbl-type-list.h  pbl-types.h
include/libpbl/func/: pbl-function.h
include/libpbl/io/: pbl-io.h
include/libpbl/mem/: pbl-mem-tools.h  pbl-mem.h
include/libpbl/types/: pbl-any.h  pbl-int.h  pbl-meta-types.h  pbl-string.h  pbl-type-list.h  pbl-types.h
include/pbl/: CMakeLists.txt  pbl-advanced-mem.c  pbl-advanced-mem.h  pbl-any.c  pbl-any.h  pbl-apply-macro.h  pbl-function.c  pbl-function.h  pbl-int.c  pbl-int.h  pbl-io.c  pbl-io.h  pbl-main.c  pbl-main.h  pbl-mem.c  pbl-mem.h  pbl-string.c  pbl-string.h  pbl-types.c  pbl-types.h  pbl.c  pbl.h
include/pbl/additional/: CMakeLists.txt
lib/: CMakeLists.txt  README.md
src/: CMakeLists.txt  pbl-err.c  pbl-function.c  pbl-io.c  pbl-main.c  pbl-mem-tools.c  pbl.c
src/core/: pbl-mem.c  pbl-type-list.c  pbl-types.c
src/func/: pbl-function.c
src/io/: pbl-io.c
src/mem/: pbl-mem-tools.c  pbl-mem.c
src/types/: pbl-any.c  pbl-int.c  pbl-string.c  pbl-type-list.c  pbl-types.c
tests/: CMakeLists.txt  test_default_header.cpp  test_io.cpp  test_types.cpp
tests/func/: test_exception.cpp
tests/general/: test_main_header.cpp  test_simple_print_program.cpp
tests/io/: test_io.cpp
tests/tests/: CMakeLists.txt  test_exception.cpp  test_int.cpp  test_io.cpp  test_parac_modules.cpp  test_string.cpp  test_types.cpp
tests/types/: test_int.cpp  test_string.cpp  test_types.cpp
